# clubby

./: .gitignore
api/: .env  .gitignore  Cargo.toml  Makefile  dev.yml
api/migrations/: V1__create_users_table.sql  V2__create_cities_table.sql
api/scripts/: docker.sh
api/src/: auth.rs  cache.rs  db.rs  error.rs  main.rs
api/src/cities/: mod.rs  model.rs  routes.rs  suggest_cities.rs
api/src/places/: get_place.rs  mod.rs
api/src/users/: login_codes.rs  mod.rs  model.rs  routes.rs  sign_up.rs
dev-proxy/: index.js  package.json
web/: .babelrc  .eslintrc.js  package.json  tsconfig.json
web/config/: webpack.dev-client.js  webpack.dev-server.js  webpack.prod-client.js  webpack.prod-server.js
web/src/: App.css  app.js
web/src/App/: AppRoot.js  Routes.js
web/src/Components/: Button.tsx  CitySuggestions.tsx  ExploreView.tsx  FormInput.tsx  Head.tsx  Intro.tsx  MenuButton.tsx  NavBar.tsx  ScrollToTop.tsx  SearchBar.tsx  SideBar.scss  SideBar.tsx  SidebarLayout.tsx  SignInButton.tsx
web/src/Views/: EditProfile.tsx  Explore.tsx  Home.tsx  Login.tsx  NotFound.tsx  SignUp.tsx
web/src/lib/: api.tsx  constants.tsx  dimensions.tsx  login.tsx  media.tsx  sidebar.tsx  signup.tsx  user.tsx
web/src/server/: express.js  render.js
